# fasthtml-web-project-template

./: .sesskey  README.md  pyproject.toml
