[project]
name = "fasthtml-web"
version = "0.1.0"
description = "A FastHTML project starting template with rye, uv, and ruff"
dependencies = [
    "python-fasthtml>=0.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ruff>=0.5.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fasthtml_web"]

[tool.rye.scripts]
devserver = { cmd = "python main.py", env-file = ".dev.env" }

